# crussant

./: .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Embed.toml  LICENSE-MIT.txt  README.md  build.rs  flake.nix  flake.nix.makeRustPlatform  justfile  memory.x  rust-toolchain.toml  todo.md
.cargo/: config.toml
.github/workflows/: test.yml
data/: rp-hal  samd21-website
data/gyml8511_uvsensor/: wiki
data/gyml8511_uvsensor/wiki_files/: load_003.php
data/images/: crussant
data/sketch/: sketch.fzz
esp32c3-embassy/: Cargo.toml
nix/picotool/: flake.nix
src/: blink.rs  button.rs  clock.rs  dashboard.rs  display.rs  epd.rs  led.rs  logger.rs  main.rs  sensor.rs
src/tasks/: blink.rs  mod.rs
waveshare-154bv2-rs/: Cargo.toml
