[package]
name = "crussant"
version = "0.1.0"
authors = ["Max Kivits <maxkivits42@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

# epd-waveshare = { version = "0.5.0", features = ["graphics"], path = "/home/max/git/epd-waveshare" }
epd-waveshare = { version = "0.5.0", features = ["graphics"] }

# embedded-graphics = "0.8.0"
# embedded-graphics-core = "0.4.0"

# deferred formatting logging
# NOTE: adapt .cargo/config.toml too
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"

# # Profile overrides to always build esp-hal in release mode
# [profile.dev.package."esp-hal"]
# opt-level = 3

# # Get a new version of these crates, so that I can blindly copy paste from an example
# [patch.crates-io]
# esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "208339ddeb5b0747d1403d611d9c8718f5bf4f08" }
# esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "208339ddeb5b0747d1403d611d9c8718f5bf4f08" }
