[package]
name = "Crussant"
version = "1.0.0"
authors = ["Max Kivits <maxkivits42@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/maxkiv/crussant"
repository = "https://github.com/maxkiv/crussant"
keywords = [
    "display",
    "sensor",
    "async",
    "i2c",
    "spi",
    "embassy",
    "embedded-hal",
    "embedded-hal-async",
]
categories = [
    "embedded",
    "no-std",
]
publish = false
exclude = [
    ".gitattributes",
    ".gitignore",
    ".drone.yml",
    ".pre-commit-config.yaml",
    "justfile",
]
build = "build.rs"

[dependencies]
# Embassy
embassy-executor = { version = "0.6", default-features = false, features = [
  # "task-arena-size-81920" # for wifi
  "task-arena-size-16384"
] }
embassy-sync = { version = "0.6", default-features = false }
embassy-time = { version = "0.3", default-features = false, features = ["generic-queue"] }
embassy-net = { version = "0.4", default-features = false, features = ["dhcpv4", "dns", "tcp", "udp"] }

# Hardware Abstraction Layer
embedded-hal = { version = "1", default-features = false }
embedded-hal-async = {  version = "1", default-features = false  }
embedded-hal-bus = { version = "0.1", default-features = false, features = ["async"] }
embedded-io-async = {  version = "0.6", default-features = false  }

# ESP specifics
esp-hal = {  version = "0.21.0", default-features = false, features = ["esp32c3"] }
esp-hal-embassy = { version = "0.4.0", default-features = false, features = [ "esp32c3", "executors"] }
esp-backtrace = { version = "0.14.2", default-features = false,  features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  # "defmt",
  "println",
] }
esp-println = {  version = "0.12.0", default-features = false, features = [
  "esp32c3",
  "log",
  # "defmt-espflash",
  "auto",
  "critical-section",
  "colors"
] }
# esp-wifi = { version = "0.7", default-features = false, features = ["esp32c3", "wifi", "async", "tcp", "ipv4", "dhcpv4", "embassy-net"] }

# Logging
log = {  version = "0.4"  }
# defmt = { version = "0.3.8" }

# Compile time Duration and Instant
fugit = "0.3.7"

# Sensor
bme280-rs = { version = "0.2", default-features = false, features = ["async", "uom"] }
uom = { version = "0.33", default-features = false,  features = ["f32", "si"] }

# Display
waveshare-154bv2-rs = { path = "./waveshare-154bv2-rs", default-features = false,  features = ["async", "draw-target"] }
# waveshare-154bv2-rs = { path = "./waveshare-154bv2-rs", default-features = false }
embedded-graphics = {   version = "0.8", default-features = false }
embedded-graphics-core = { version = "0.4", default-features = false }
embedded-layout = { version = "0.4", default-features = false }

# Static objects
static_cell = {  version = "2", default-features = false  }

# Heapless data types
heapless = {  version = "0.8", default-features = false  }

# Time
time = {   version = "0.3", default-features = false }

# HTTP
# reqwless = { version = "0.12", default-features = false , features = ["embedded-tls", "log"] }

# Random
rand_core = {   version = "0.6", default-features = false }


[profile.release]
strip = "debuginfo"
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
