[package]
name = "esp32c3-embassy"
version = {  }
authors = {  }
edition = {  }
description = "An async firmware for ESP32-C3 for reading and displaying sensor values using Embassy"
readme = {  }
homepage = {  }
repository = {  }
license = "MPL-2.0"
keywords = {  }
categories = {  }
publish = {  }
exclude = {  }

[features]
default = []

[dependencies]
# Embassy
embassy-executor = { features = ["task-arena-size-81920"] }
embassy-sync = {  }
embassy-time = { features = ["generic-queue"] }
embassy-net = { features = ["dhcpv4", "dns", "tcp", "udp"] }

# Hardware Abstraction Layer
embedded-hal = {  }
embedded-hal-async = {  }
embedded-hal-bus = { features = ["async"] }
embedded-io-async = {  }

# ESP specifics
esp-hal = { features = ["esp32c3", "async"] }
esp-hal-embassy = { features = ["executors"] }
esp-backtrace = { features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { features = ["esp32c3", "log", "uart", "colors"] }
esp-wifi = { features = ["esp32c3", "wifi", "async", "tcp", "ipv4", "dhcpv4", "embassy-net"] }

# Logging
log = {  }

# Sensor
bme280-rs = { features = ["async", "uom"] }
uom = { features = ["f32", "si"] }

# Display
waveshare-154bv2-rs = { features = ["async", "draw-target"] }
embedded-graphics = {  }
embedded-layout = {  }

# Static objects
static_cell = {  }

# Heapless data types
heapless = {  }

# Time
time = {  }

# HTTP
reqwless = { features = ["embedded-tls", "log"] }

# Random
rand_core = {  }

[lints]

