[package]
name = "waveshare-154bv2-rs"
version = {  }
authors = {  }
edition = {  }
description = "A crate for interfacing with E-INK displays"
readme = {  }
homepage = {  }
repository = {  }
license = "MIT OR Apache-2.0"
rust-version = "1.75"
keywords = {  }
categories = {  }
publish = {  }
exclude = {  }

[features]
default = ["blocking", "async"]
blocking = ["dep:embedded-hal"]
async = ["dep:embedded-hal", "dep:embedded-hal-async"]
draw-target = ["dep:embedded-graphics-core"]
std = []

[dependencies]
# Logging
log = {  }

# Hardware Abstraction Layer (HAL)
embedded-hal = { optional = true }
embedded-hal-async = { optional = true }

# Graphics
embedded-graphics-core = { optional = true }

[lints]

