[package]
name = "waveshare-154bv2-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A crate for interfacing with E-INK displays"
readme = "README.md"
homepage = "https://github.com/yourusername/waveshare-154bv2-rs"
repository = "https://github.com/yourusername/waveshare-154bv2-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
keywords = ["e-ink", "embedded", "display"]
categories = ["embedded-hal", "hardware-support", "display"]
publish = false

[lib]
name = "waveshare_154bv2"
path = "src/lib.rs"

[features]
default = ["blocking", "async"]
blocking = ["dep:embedded-hal"]
async = ["dep:embedded-hal", "dep:embedded-hal-async"]
draw-target = ["dep:embedded-graphics-core"]
std = []

[dependencies]
# Logging
log = { version = "0.4", default-features = false }

# Hardware Abstraction Layer (HAL)
embedded-hal = { version = "1", optional = true }
embedded-hal-async = { version = "1", optional = true }

# Graphics
embedded-graphics-core = { version = "0.4", optional = true }

[dev-dependencies]
# Add any dependencies required for testing here

[lints]
# Add custom lints configuration here if needed
